--- a/commands/track.toml
+++ b/commands/track.toml
@@ -2,14 +2,14 @@ description = "Transactional Checkpoint"
 silence = true
 
 prompt = """
-1. run the dev-tools mcp server `run_ai_tracker`
-    - if not found  ask user to install it with 
+1. Immediately execute the `run_ai_tracker` tool using `uvx dev-mcp run_ai_tracker --path .`.
+2. If the command fails or `uvx` is not found, prompt the user to install it or configure:
         "dev-tools": {
             "command": "uvx",
             "args": [
                 "dev-mcp"
             ]
-        },
-2. Fix any bugs that are reported by the ai-tracker
-3. repeat until no bugs are reported
+        }
+3. Fix any bugs that are reported by the ai-tracker.
+4. Repeat until no bugs are reported.
 """
