refactor(commands): Clarify track command execution
Updated the description for the 'track' command in `track.toml` to explicitly state its purpose of immediately executing the `run_ai_tracker` tool.

--- a/commands/track.toml
+++ b/commands/track.toml
@@ -2,6 +2,7 @@ description = "Transactional Checkpoint"
 silence = true
 
 prompt = """
+Goal is to immediately execute the `run_ai_tracker` tool without any delay, text or explanation.
 1. Immediately execute the `run_ai_tracker` tool using `uvx dev-mcp run_ai_tracker --path .`.
 2. If the command fails or `uvx` is not found, prompt the user to install it or configure:
         "dev-tools": {
